dataset1235/2025-2/1153765216/users/3158098637/executions/2747719322_2383239197.log
== RUN (2025-08-21 19:43:08)
-- CODE: 
import math
a = float(input("distância a entre observador e primeira arvore: "))
b = float(input("distância b: "))
ya = float(input("ângulo y: "))
y = math.radians(ya)
c = math.sqrt(a**2+b**2-2*a*b*math.cos(y))
print(round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
distância a entre observador e primeira arvore: distância b: ângulo y: 87.54
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
distância a entre observador e primeira arvore: distância b: ângulo y: 16.42
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
distância a entre observador e primeira arvore: distância b: ângulo y: 17.14
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
distância a entre observador e primeira arvore: distância b: ângulo y: 1.88
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
distância a entre observador e primeira arvore: distância b: ângulo y: 54.43
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
distância a entre observador e primeira arvore: distância b: ângulo y: 9.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 19:23:13)
-- CODE: 
import math
a = float(input("distância a entre observador e primeira arvore: "))
b = float(input("distância b: "))
y = float(input("ângulo y: "))
c = math.radians(a**2+b**2-2*a*b*cos(y))
print(round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = math.radians(a**2+b**2-2*a*b*cos(y))
                                     ^^^
NameError: name 'cos' is not defined
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = math.radians(a**2+b**2-2*a*b*cos(y))
                                     ^^^
NameError: name 'cos' is not defined
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = math.radians(a**2+b**2-2*a*b*cos(y))
                                     ^^^
NameError: name 'cos' is not defined
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = math.radians(a**2+b**2-2*a*b*cos(y))
                                     ^^^
NameError: name 'cos' is not defined
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = math.radians(a**2+b**2-2*a*b*cos(y))
                                     ^^^
NameError: name 'cos' is not defined
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c = math.radians(a**2+b**2-2*a*b*cos(y))
                                     ^^^
NameError: name 'cos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 19:23:44)
-- CODE: 
import math
a = float(input("distância a entre observador e primeira arvore: "))
b = float(input("distância b: "))
y = float(input("ângulo y: "))
c = math.radians(a**2+b**2-2*a*b*math.cos(y))
print(round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
distância a entre observador e primeira arvore: distância b: ângulo y: 217.68
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
distância a entre observador e primeira arvore: distância b: ângulo y: 11.47
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
distância a entre observador e primeira arvore: distância b: ângulo y: 8.87
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
distância a entre observador e primeira arvore: distância b: ângulo y: 0.07
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
distância a entre observador e primeira arvore: distância b: ângulo y: 56.35
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
distância a entre observador e primeira arvore: distância b: ângulo y: 5.52
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 19:39:10)
-- CODE: 
import math
a = float(input("distância a entre observador e primeira arvore: "))
b = float(input("distância b: "))
yt = float(input("ângulo y: "))
y = math.radians(yt)
c = a**2+b**2-2*a*b*math.cos(y)
print(round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
distância a entre observador e primeira arvore: distância b: ângulo y: 7663.33
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
distância a entre observador e primeira arvore: distância b: ângulo y: 269.68
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
distância a entre observador e primeira arvore: distância b: ângulo y: 293.91
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
distância a entre observador e primeira arvore: distância b: ângulo y: 3.54
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
distância a entre observador e primeira arvore: distância b: ângulo y: 2963.14
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
distância a entre observador e primeira arvore: distância b: ângulo y: 84.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 19:42:37)
-- CODE: 
import math
a = float(input("distância a entre observador e primeira arvore: "))
b = float(input("distância b: "))
y = float(input("ângulo y: "))
c = math.sqrt(a**2+b**2-2*a*b*math.cos(y))
print(round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
distância a entre observador e primeira arvore: distância b: ângulo y: 111.68
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
distância a entre observador e primeira arvore: distância b: ângulo y: 25.64
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
distância a entre observador e primeira arvore: distância b: ângulo y: 22.55
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
distância a entre observador e primeira arvore: distância b: ângulo y: 1.94
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
distância a entre observador e primeira arvore: distância b: ângulo y: 56.82
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
distância a entre observador e primeira arvore: distância b: ângulo y: 17.79
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:43:59)
-- CODE: 
import math
a = float(input("distância a entre observador e primeira arvore: "))
b = float(input("distância b: "))
ya = float(input("ângulo y: "))
y = math.radians(ya)
c = math.sqrt(a**2+b**2-2*a*b*math.cos(y))
print(round(c,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
distância a entre observador e primeira arvore: distância b: ângulo y: 87.54
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
distância a entre observador e primeira arvore: distância b: ângulo y: 16.42
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
distância a entre observador e primeira arvore: distância b: ângulo y: 17.14
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
distância a entre observador e primeira arvore: distância b: ângulo y: 1.88
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
distância a entre observador e primeira arvore: distância b: ângulo y: 54.43
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
distância a entre observador e primeira arvore: distância b: ângulo y: 9.17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 19:37:04)
-- CODE: 
import math
a = float(input("distância a entre observador e primeira arvore: "))
b = float(input("distância b: "))
y = float(input("ângulo y: "))
c = a**2+b**2-2*a*b*math.radians(math.cos(y))
print(round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
distância a entre observador e primeira arvore: distância b: ângulo y: 10089.1
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
distância a entre observador e primeira arvore: distância b: ângulo y: 455.67
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
distância a entre observador e primeira arvore: distância b: ângulo y: 827.38
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
distância a entre observador e primeira arvore: distância b: ângulo y: 21.84
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
distância a entre observador e primeira arvore: distância b: ângulo y: 3037.4
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
distância a entre observador e primeira arvore: distância b: ângulo y: 166.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
